--- a/trunk/conditionsdbUi/index.html
+++ b/trunk/conditionsdbUi/index.html
@@ -4,143 +4,53 @@
   <title>Conditions Database Demo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-       <script src="lib/underscore-min.js" type="text/javascript"></script>
-       <script src="lib/backbone-min.js" type="text/javascript"></script>
-  <script src="lib/vendor/bootstrap.min.js" type="text/javascript"></script>
-	<script src="lib/jquery-ui.custom.js" type="text/javascript"></script>
 
-	<link href="css/skin-win8/ui.fancytree.css" rel="stylesheet" type="text/css">
-	<script src="lib/jquery.fancytree.js" type="text/javascript"></script>
+<!--Stylesheets for GUI -->
+    
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="css/skin-win8/ui.fancytree.css" rel="stylesheet" type="text/css">
+
+<!--Javascript Libraries -->
+
+  <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+  <script src="lib/underscore-min.js" type="text/javascript"></script>
+  <script src="lib/vendor/bootstrap.min.js" type="text/javascript"></script>
+  <script src="lib/jquery-ui.custom.js" type="text/javascript"></script>
+  <script src="lib/jquery.fancytree.js" type="text/javascript"></script>
+
 
 
 <script type="text/javascript">
-//      var treeData = 
-
-//[
-//	{"title": "<strong>Global Tags</strong>", "expanded": true, "folder": true, "children": [
-//		{"title": "TEST_GT1", "extraClasses": "yes", "children": [
-//			{"title": "<strong>Payloads</strong>", "extraClasses": "yes", "children": [
-//                                {"title": "Payload-1", "extraClasses": "yes", "children": [
-//				    {"title": "Module-1", "extraClasses": "yes", "children": [
-//					{"title": "IOV-1", "extraClasses": "answer"},
-//					{"title": "IOV-2", "extraClasses": "answer"},
-//                                        {"title": "IOV-3", "extraClasses": "answer"}
-//                                   ]}
-//				]}
-//			]}
-//		]},
-//                {"title": "TEST_GT2", "extraClasses": "answer"},
-//                {"title": "TEST_GT3", "extraClasses": "answer"},
-//                {"title": "TEST_GT4", "extraClasses": "answer"},
-//                {"title": "TEST_GT5", "extraClasses": "answer"},
-//                {"title": "TEST_GT6", "extraClasses": "answer"},
-//                {"title": "TEST_GT7", "extraClasses": "answer"},
-//                {"title": "TEST_GT8", "extraClasses": "answer"},
-//                {"title": "TEST_GT9", "extraClasses": "answer"},
-//                {"title": "TEST_GT10", "extraClasses": "answer"}
-//	]}
-//]
-
-
-
-
-
 
 //
-// Construct Tree JSON String
+// Global variable settings
 //
-  var treeString = '[{"title": "<strong>Global Tags</strong>", "expanded": true, "folder": true, "children": [ ';
-  var treeStringClose =' 	]} ]';
-  var treeData = new Object();
-
-function getPayloads(index) {
-
-   var payloads = "";
-    var payload = $.parseJSON(
-    $.ajax(
-        {
-           url: "http://belle2db.hep.pnnl.gov/b2s/rest/v1/globalTag/" + index + "/payloads", 
-           async: false, 
-           dataType: 'json'
-        }
-       ).responseText
-    ); 
-   var payloadid_prefix = "payload_";
-   for (var p=0; p < payload.length; p++) {
-          if (p == 0) {
-             payloads = '[';
-          }
-          payloads = payloads + '{"title": "' + payload[p].payloadUrl + '", "id": "' + payloadid_prefix + index + '", "extraClasses": "answer"}';
-          if (p == (payload.length -1)) {
-             payloads = payloads + ']}';
-             break;
-          }
-          payloads = payloads + ',';
-   }     
- 
-   return payloads;
-}
-
-function getTreeData() {
-
-
-//
-//  Get Global Tags
-//
-
-    var gt = $.parseJSON(
-    $.ajax(
-        {
-           url: "http://belle2db.hep.pnnl.gov/b2s/rest/v1/globalTags", 
-           async: false, 
-           dataType: 'json'
-        }
-       ).responseText
-    );    
-    var gtid_prefix = "globaltag_";
-    for (var i = 0; i < gt.length; i++) {
-        payloads = getPayloads(gt[i].globalTagId);
-        if (payloads.indexOf("title") != -1 ) {
-            treeString = treeString + '{"title": "' + gt[i].name + '", "id": "' + gtid_prefix + gt[i].globalTagId + '", "extraClasses": "yes", "children":';
-            treeString = treeString + payloads ;
-        } else {
-            treeString = treeString + '{"title": "' + gt[i].name + '", "id": "' + gtid_prefix + gt[i].globalTagId + '", "extraClasses": "answer"}';
-        }
-        if (i == (gt.length-1)) {
-           treeString = treeString + treeStringClose;
-           console.log(treeString);
-           break;
-        }
-        treeString = treeString + ',';
-     }
-
-    
-}
-
-
-getTreeData();
-treeData = JSON.parse(treeString);
-
-
-
-
-
-
-
+var server;
+var treeIndex;
+server = "http://belle2db.hep.pnnl.gov/b2s/rest/v1";
+treeIndex = 0;
 
 </script>
 
+<!--                                   -->
+<!-- Conditions DB Application Scripts -->
+<!--                                   -->
 
+  <script src="js/read_db_refs.js" type="text/javascript"></script>
+  <script src="js/create_global_tag_template.js" type="text/javascript"></script>
+  <script src="js/read_global_tag_template.js" type="text/javascript"></script>
+  <script src="js/read_tree_template.js" type="text/javascript"></script>
 
-	<!-- Start_Exclude: This block is not part of the sample code -->
-	<link href="css/prettify.css" rel="stylesheet">
-	<script src="lib/prettify.js" type="text/javascript"></script>
-	<link href="css/sample.css" rel="stylesheet" type="text/css">
-	<script src="lib/sample.js" type="text/javascript"></script>
+<!--                                   -->
+<!-- General Fancy Tree Styling        -->
+<!--                                   -->
 
-	<style type="text/css">
+<link href="css/prettify.css" rel="stylesheet">
+<script src="lib/prettify.js" type="text/javascript"></script>
+<link href="css/sample.css" rel="stylesheet" type="text/css">
+<script src="lib/sample.js" type="text/javascript"></script>
+
+<style type="text/css">
 	span.fancytree-node.no span.fancytree-icon {
 		background-position: 0 0;
 		background-image: url("skin-custom/exclamation.png");
@@ -157,86 +67,55 @@ treeData = JSON.parse(treeString);
 		background-position: 0 0;
 		background-image: url("skin-custom/emoticon_smile.png");
 	}
-        </style>
-	<script type="text/javascript">
+</style>
 
-         function clearvals(){
-           document.getElementById('globaltagid').value = "";
-           document.getElementById('globaltagname').value = "";
-           document.getElementById('globaltagdescription').value = "";
-           document.getElementById('globaltagcreation').value = "";
-           document.getElementById('globaltagmodifydate').value = "";
-           document.getElementById('globaltagmodifiedby').value = "";
-          document.getElementById('globaltagtype').value = "";
-          document.getElementById('globaltagtypedescription').value = "";
-           document.getElementById('globaltagtypecreation').value = "";
-           document.getElementById('globaltagtypemodifydate').value = "";
-             document.getElementById('globaltagstatus').value = "";
-           document.getElementById('globaltagstatusdescription').value = "";
-           document.getElementById('globaltagstatuscreation').value = "";
-           document.getElementById('globaltagstatusmodifydate').value = "";
+<!--                                                   -->
+<!-- Conditions DB UI SPA Web Page Content Swap Logic  -->
+<!--                                                   -->
 
-         }
+<script type="text/javascript">
+function read_global_tag_tree () {
+   $("#left").replaceWith(window.create_global_tag_tree_tmpl);
+}
+ 
+function create_global_tag () {
+   set_global_tag_tmpl(get_gt_types());
+   $("#right").replaceWith(window.create_global_tag_tmpl);
+}
+ 
+function switch_tree_index () {
+   var mytree;
+   mytree = $("#tree").fancytree("getTree");
+   if (treeIndex == 1) {
+      treeIndex = 0;
+   } else {
+     treeIndex = 1;
+   }
+   getTreeData();
+   mytree.reload(treeData).done(function(){
+  alert("reloaded");
+  });
+  alert("done");
+}
 
-         function getval(index) {
-           jQuery.getJSON( "http://belle2db.hep.pnnl.gov/b2s/rest/v1/globalTag/"+index, function( response ) {
-           //console.dir(response)
-           //console.log(response.globalTagId + " " + response.name + " " + response.desc + " " + response.dtmIns);
-           document.getElementById('globaltagid').value = response.globalTagId;
-           document.getElementById('globaltagname').value = response.name;
-           document.getElementById('globaltagdescription').value = response.description;
-           document.getElementById('globaltagcreation').value = response.dtmIns;
-           document.getElementById('globaltagmodifydate').value = response.dtmMod;
- //          document.getElementById('globaltagisdefault').value = response.isDefault;
-           document.getElementById('globaltagmodifiedby').value = response.modifiedBy;
-          document.getElementById('globaltagtype').value = response.globalTagType.name;
-          document.getElementById('globaltagtypedescription').value = response.globalTagType.description;
-           document.getElementById('globaltagtypecreation').value = response.globalTagType.dtmIns;
-           document.getElementById('globaltagtypemodifydate').value = response.globalTagType.dtmMod;
-             document.getElementById('globaltagstatus').value = response.globalTagStatus.name;
-           document.getElementById('globaltagstatusdescription').value = response.globalTagStatus.description;
-           document.getElementById('globaltagstatuscreation').value = response.globalTagStatus.dtmIns;
-           document.getElementById('globaltagstatusmodifydate').value = response.globalTagStatus.dtmMod;
-           response['return'];
-           });
-          }
-		$(function(){
-			// using default options
-			$("#tree").fancytree({
-                                source:treeData,
-                                selectMode: 1,
-                                checkbox: true,
-                                select: function(event, data) {
-                                // Display list of selected nodes
-                                var s = data.tree.getSelectedNodes().join(", ");
-                                var nodes = data.tree.getSelectedNodes();
-                                if (nodes[0].getParent()) {
-                                var parentnode = nodes[0].getParent();
-                                if (!parentnode) {
-                                  console.log("selected child is root node");
-                                } else {
-                                  var s = parentnode.title;
-                                  if (s.indexOf("Global Tag") > -1)  {
-                                     var gtid =  nodes[0].data.id;
-                                     var tokens = gtid.split('_');
-                                     var gt_db_id = tokens[1]; 
-                                     getval(gt_db_id);
-                                  } else {
-                                     console.log("This is not a global tag");
-                                     clearvals();
-                                  }
-                                }
-                                }
-                                //var gttitle =  console.log (nodes[0].title);
-                                //var gtid = gttitle.substr(gttitle.length - 1); // => "1"
-                        }
-		});
-});
-	</script>
+ function read_global_tag_details () {
+   $("#right").replaceWith(window.read_global_tag_tmpl);
+ }
 
+ function clear_right_div () {
+   $("#right").replaceWith(window.clear_right_tmpl);
+ }
+
+
+// window.read_global_tag_tree();
+</script>
 
 </head>
 <body>
+
+<!--              -->
+<!-- Top Menu Bar -->
+<!--              -->
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -247,7 +126,8 @@ treeData = JSON.parse(treeString);
       <ul class="nav navbar-nav">
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Global Tags <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">New...</a></li>
+          <li> <a href="#" onclick="window.switch_tree_index()" id="mnu_switch">Switch...</a> </li>
+          <li> <a href="#" onclick="window.create_global_tag()" id="mnu_creategt">Create...</a> </li>
             <li><a href="#">Edit...</a></li>
             <li><a href="#">Approval...</a></li>
           </ul>
@@ -261,154 +141,40 @@ treeData = JSON.parse(treeString);
       </li>
     </ul>
 </nav>
+
+<!--                        -->
+<!-- Row Content Container -->
+<!--                        -->
   
 <div class="container">
+
   <div class="row">     
-    <div class="col-md-6">
-        <table>
-        <tr>
-        <td>
-	<label>Global Tag Directory<label>
-        </td>
-        </tr>
-        <tr>
-        <td>
-        <div id="tree"></div>
-        </td>
-        </tr>
-       </table>
-<!--	<pre id="sourceCode" class="prettyprint" style="display:none"></pre>  -->
-	<!-- End_Exclude -->
-       </div>
-    <div class="col-md-6">
-        <table>
-        <tr>
-        <td>
-         <label>Details:</label>
-        </td>
-        </tr>
-        <tr>
-        <td>
-        <label>Global Tag Id:</label>
-        </td>
-        <td>
-        <input id="globaltagid"/>
-        </td>
-        </tr>
-        <tr>
-        <td>
-        <label>Global Tag Name:</label>
-        </td>
-        <td>
-        <input id="globaltagname"/>
-        </td>
-        </tr>
 
-        <tr>
-        <td>
-        <label>Status:</label>
-        </td>
-        <td>
-        <input id="globaltagstatus"/>
-        </td>
-        </tr>
-         <tr>
-         <td>
-        <label>Tag Type:</label>
-        </td>
-        <td>
-        <input id="globaltagtype"/>
-        </td>
-        </tr>
+<!--                        -->
+<!-- Left Content Container -->
+<!--                        -->
 
-         <tr>
-         <td>
-        <label>Tag Type Description:</label>
-        </td>
-        <td>
-        <input id="globaltagtypedescription"/>
-        </td>
-        </tr>
-
-         <tr>
-         <td>
-        <label>Tag Type Creation:</label>
-        </td>
-        <td>
-        <input id="globaltagtypecreation"/>
-        </td>
-        </tr>
-
-         <tr>
-         <td>
-        <label>Tag Type Modification:</label>
-        </td>
-        <td>
-        <input id="globaltagtypemodifydate"/>
-        </td>
-        </tr>
-
-        <tr>
-        <td>
-        <label>Description:</label>
-        </td>
-        <td>
-        <input id="globaltagdescription"/>
-        </td>
-        </tr>
-        <tr>
-        <td>
-        <label>Creation:</label>
-        </td>
-        <td>
-        <input id="globaltagcreation"/>
-        </td>
-        </tr>
-        <tr>
-        <td>
-        <label>Modification Date:</label>
-        </td>
-        <td>
-        <input id="globaltagmodifydate"/>
-        </td>
-        </tr>
-        <tr>
-        <td>
-        <label>Modified By:</label>
-        </td>
-        <td>
-        <input id="globaltagmodifiedby"/>
-        </td>
-        </tr>
+    <div class="col-md-6"  id="left" >
+      <table> 
+         <tr> 
+            <td> 
+                 <label>Global Tag Directory<label> 
+            </td> 
+         </tr> 
+         <tr>  
+            <td>  
+                 <div id="tree"></div> 
+            </td> 
+          </tr> 
+       </table> 
+    </div> 
 
 
+<!--                         -->
+<!-- Right Content Container -->
+<!--                         -->
 
-        <tr>
-        <td>
-        <label>Status Description:</label>
-        </td>
-        <td>
-        <input id="globaltagstatusdescription"/>
-        </td>
-        </tr>
-        <tr>
-        <td>
-        <label>Status Creation:</label>
-        </td>
-        <td>
-        <input id="globaltagstatuscreation"/>
-        </td>
-        </tr>
-        <tr>
-        <td>
-        <label>Modification Status Date:</label>
-        </td>
-        <td>
-        <input id="globaltagstatusmodifydate"/>
-        </td>
-        </tr>
-
-       </table>
+    <div class="col-md-6" id="right" >
  
     </div>
 
@@ -417,6 +183,11 @@ treeData = JSON.parse(treeString);
 
 
 </div>
+
+<!--                        -->
+<!-- Bottom Menu            -->
+<!--                        -->
+
 <div class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
 <!--    <span class="navbar-text">  -->
