--- a/trunk/conditionsdbUi/index.html
+++ b/trunk/conditionsdbUi/index.html
@@ -28,6 +28,7 @@
 var server;
 var treeIndex;
 server = "http://belle2db.hep.pnnl.gov/b2s/rest/v1";
+//server = "http://offshoreweb.pnnl.gov:8080/b2s/rest/v1";
 treeIndex = 0;
 
 </script>
@@ -87,15 +88,15 @@ function switch_tree_index () {
    var mytree;
    mytree = $("#tree").fancytree("getTree");
    if (treeIndex == 1) {
+    $("label[for='treelabel']").text('Global Tag Directory');
       treeIndex = 0;
    } else {
      treeIndex = 1;
+    $("label[for='treelabel']").text('Payload Directory');
    }
    getTreeData();
    mytree.reload(treeData).done(function(){
-  alert("reloaded");
   });
-  alert("done");
 }
 
  function read_global_tag_details () {
@@ -126,7 +127,6 @@ function switch_tree_index () {
       <ul class="nav navbar-nav">
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Global Tags <span class="caret"></span></a>
           <ul class="dropdown-menu">
-          <li> <a href="#" onclick="window.switch_tree_index()" id="mnu_switch">Switch...</a> </li>
           <li> <a href="#" onclick="window.create_global_tag()" id="mnu_creategt">Create...</a> </li>
             <li><a href="#">Edit...</a></li>
             <li><a href="#">Approval...</a></li>
@@ -136,6 +136,11 @@ function switch_tree_index () {
           <ul class="dropdown-menu">
             <li><a href="#">Keyword...</a></li>
             <li><a href="#">Advanced...</a></li>
+          </ul>
+        </li>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Test<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+          <li> <a href="#" onclick="window.switch_tree_index()" id="mnu_switch">Toggle Tree...</a> </li>
           </ul>
         </li>
       </li>
@@ -158,7 +163,7 @@ function switch_tree_index () {
       <table> 
          <tr> 
             <td> 
-                 <label>Global Tag Directory<label> 
+                 <label for="treelabel" >Global Tag Directory<label> 
             </td> 
          </tr> 
          <tr>  
