--- a/trunk/conditionsdbUi/index.html
+++ b/trunk/conditionsdbUi/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Conditions Database Demo</title>
@@ -17,10 +17,260 @@
   <script src="lib/vendor/bootstrap.min.js" type="text/javascript"></script>
   <script src="lib/jquery-ui.custom.js" type="text/javascript"></script>
   <script src="lib/jquery.fancytree.js" type="text/javascript"></script>
+  <script src="lib/jquery.fancytree.columnview.js" type="text/javascript"></script>
+  <script src="lib/jquery.fancytree.dnd.js" type="text/javascript"></script>
+  <script src="lib/jquery.fancytree.table.js" type="text/javascript"></script>
+  <!-- jquery-contextmenu (https://github.com/mar10/jquery-ui-contextmenu/) -->
+  <script src="lib/jquery.ui-contextmenu.min.js" type="text/javascript"></script>
 
+<style type="text/css">
+#contextMenu {
+  position: absolute;
+  display:none;
+}
+</style>
+//<style type="text/css">
+//  .ui-menu {
+//    width: 150px;
+//    font-size: 100%;
+//    z-index: 3; /* over ext-wide titles */
+//  }
+
+//  <!-- (Irrelevant source removed.) -->
+//</style>
+
+<style type="text/css">
+ul.fancytree-container {
+  width: 400px;
+  height: 600px;
+  overflow: auto;
+  position: relative;
+}
+</style>
 
 
 <script type="text/javascript">
+$(function() {
+     $("#tree").contextmenu({
+        target: '#context-menu2',
+        onItem: function(e, item) {
+          if ($(item).text() === "Create Global Tag") {
+              create_global_tag () ;
+          }
+          else if ($(item).text() === "Add Payloads") {
+              switch_payload_tree();
+              read_right_textarea();
+          }
+          else if ($(item).text() === "Switch Treeview") {
+              switch_tree_index();
+          } else {
+              alert($(item).text());
+          }
+        }
+     });
+});
+
+
+/*!
+ * Bootstrap Context Menu
+ * Version: 2.1
+ * A small variation of the dropdown plugin by @sydcanem
+ * https://github.com/sydcanem/bootstrap-contextmenu
+ *
+ * New options added by @jeremyhubble for javascript launching
+ *  $('#elem').contextmenu({target:'#menu',before:function(e) { return true; } });
+ *
+ *
+ * Twitter Bootstrap (http://twitter.github.com/bootstrap).
+ */
+
+/* =========================================================
+ * bootstrap-contextmenu.js
+ * =========================================================
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * ========================================================= */
+
+!(function($) {
+
+	"use strict"; // jshint ;_;
+
+	/* CONTEXTMENU CLASS DEFINITION
+	 * ============================ */
+
+	var ContextMenu = function (elements, options) {
+			this.$elements = $(elements)
+			this.options = options
+			this.before = this.options.before || this.before
+			this.onItem = this.options.onItem || this.onItem
+			if (this.options.target)
+				this.$elements.attr('data-target',this.options.target)
+
+			this.listen()
+		}
+
+	ContextMenu.prototype = {
+
+		constructor: ContextMenu
+		,show: function(e) {
+
+			var $this = $(this)
+				, $menu
+				, $contextmenu
+				, evt;
+
+
+			if ($this.is('.disabled, :disabled')) return;
+
+			evt = $.Event('context');
+			if (!this.before.call(this,e,$(e.currentTarget))) return;
+			this.$elements.trigger(evt);
+
+			$menu = this.getMenu();
+
+			var tp = this.getPosition(e, $menu);
+			$menu.attr('style', '')
+				.css(tp)
+				.data('_context_this_ref', this)
+				.addClass('open');
+
+
+			return false;
+		}
+
+		,closemenu: function(e) {
+			this.getMenu().removeClass('open');
+		}
+
+		,before: function(e) {
+			return true;
+		}
+
+		,onItem: function(e, context) {
+			return true;
+		}
+
+		,listen: function () {
+			var _this = this;
+			this.$elements
+					.on('contextmenu.context.data-api', $.proxy(this.show, this));
+			$('html')
+					.on('click.context.data-api', $.proxy(this.closemenu, this));
+
+			var $target = $(this.$elements.attr('data-target'));
+
+			$target.on('click.context.data-api', function (e) {
+				if($(this).data('_context_this_ref') == _this) {
+					_this.onItem.call(this,e,$(e.target));
+				}
+			});
+
+			$('html').on('click.context.data-api', function (e) {
+				if (!e.ctrlKey) {
+					$target.removeClass('open');
+				}
+			});
+		}
+
+		,destroy: function() {
+			this.$elements.off('.context.data-api').removeData('context');
+			$('html').off('.context.data-api');
+
+			var $target = $(this.$elements.attr('data-target'));
+			$target.off('.context.data-api');
+		}
+
+		,getMenu: function () {
+			var selector = this.$elements.attr('data-target')
+				, $menu;
+
+			if (!selector) {
+				selector = this.$elements.attr('href')
+				selector = selector && selector.replace(/.*(?=#[^\s]*$)/, '') //strip for ie7
+			}
+
+			$menu = $(selector);
+
+			return $menu;
+		}
+
+		,getPosition: function(e, $menu) {
+			var mouseX = e.clientX
+				, mouseY = e.clientY
+				, boundsX = $(window).width()
+				, boundsY = $(window).height()
+				, menuWidth = $menu.find('.dropdown-menu').outerWidth()
+				, menuHeight = $menu.find('.dropdown-menu').outerHeight()
+				, tp = {"position":"absolute"}
+				, Y, X;
+
+			if (mouseY + menuHeight > boundsY) {
+				Y = {"top": mouseY - menuHeight + $(window).scrollTop()};
+			} else {
+				Y = {"top": mouseY + $(window).scrollTop()};
+			}
+
+			if ((mouseX + menuWidth > boundsX) && ((mouseX - menuWidth) > 0)) {
+				X = {"left": mouseX - menuWidth + $(window).scrollLeft()};
+			} else {
+				X = {"left": mouseX + $(window).scrollLeft()};
+			}
+
+			return $.extend(tp, Y, X);
+		}
+
+		,clearMenus: function(e) {
+			if (!e.ctrlKey) {
+				$('[data-toggle=context]').each(function() {
+					this.getMenu()
+						.removeClass('open');
+				});
+			}
+		}
+	}
+
+	/* CONTEXT MENU PLUGIN DEFINITION
+	 * ========================== */
+
+	$.fn.contextmenu = function (option,e) {
+		var $this = this;
+		return (function () {
+			var data = $this.data('context')
+				, options = typeof option == 'object' && option
+
+			if (!data) $this.data('context', (data = new ContextMenu($this, options)));
+			// "show" method must also be passed the event for positioning
+			if (typeof option == 'string') data[option].call(data,e);
+		})();
+	}
+
+	$.fn.contextmenu.Constructor = ContextMenu;
+
+	/* APPLY TO STANDARD CONTEXT MENU ELEMENTS
+	 * =================================== */
+
+	$(document)
+		.on('contextmenu.context.data-api', '[data-toggle=context]', function(e) {
+				$(this).contextmenu('show',e);
+				e.preventDefault();
+		});
+
+}(window.jQuery));
+</script>
+
+<script type="text/javascript">
+
+
 
 //
 // Global variable settings
@@ -30,17 +280,48 @@ var treeIndex;
 server = "http://belle2db.hep.pnnl.gov/b2s/rest/v1";
 //server = "http://offshoreweb.pnnl.gov:8080/b2s/rest/v1";
 treeIndex = 0;
-
+var selectedNode;
+selectedNode = new Object();
+selectedNode = {"nodeId":"","nodeType":"","nodeTitle":""};
 </script>
 
+<script>
+//$(function() {
+//  
+//  var $contextMenu = $("#contextMenu");
+//  
+//  $("body").on("contextmenu", "tree", function(e) {
+//    $contextMenu.css({
+//      display: "block",
+//      left: e.pageX,
+//      top: e.pageY
+//    });
+//    return false;
+//  });
+//  
+//  $contextMenu.on("click", "a", function() {
+//     $contextMenu.hide();
+//     create_global_tag () ;
+//     alert("Hi Mom");
+//  });
+//  
+//});
+
+
+
+
+
+</script>
 <!--                                   -->
 <!-- Conditions DB Application Scripts -->
 <!--                                   -->
 
   <script src="js/read_db_refs.js" type="text/javascript"></script>
   <script src="js/create_global_tag_template.js" type="text/javascript"></script>
+  <script src="js/clear_right_template.js" type="text/javascript"></script>
   <script src="js/read_global_tag_template.js" type="text/javascript"></script>
   <script src="js/read_tree_template.js" type="text/javascript"></script>
+  <script src="js/read_right_textarea_template.js" type="text/javascript"></script>
 
 <!--                                   -->
 <!-- General Fancy Tree Styling        -->
@@ -76,37 +357,55 @@ treeIndex = 0;
 
 <script type="text/javascript">
 function read_global_tag_tree () {
-   $("#left").replaceWith(window.create_global_tag_tree_tmpl);
+   $("#left").html(window.create_global_tag_tree_tmpl);
 }
  
 function create_global_tag () {
    set_global_tag_tmpl(get_gt_types());
-   $("#right").replaceWith(window.create_global_tag_tmpl);
+   $("#right").html(window.create_global_tag_tmpl);
 }
  
 function switch_tree_index () {
-   var mytree;
-   mytree = $("#tree").fancytree("getTree");
+   var conditionsDbTree;
+   conditionsDbTree = $("#tree").fancytree("getTree");
    if (treeIndex == 1) {
     $("label[for='treelabel']").text('Global Tag Directory');
       treeIndex = 0;
+      $("#tree").fancytree({selectMode:1});
    } else {
      treeIndex = 1;
-    $("label[for='treelabel']").text('Payload Directory');
+    $("label[for='treelabel']").text('Payload Directory for TEST_GT1');
+      $("#tree").fancytree({selectMode:3});
    }
    getTreeData();
-   mytree.reload(treeData).done(function(){
+   conditionsDbTree.reload(treeData).done(function(){
   });
 }
 
+function switch_payload_tree () {
+  var conditionsDbTree;
+  conditionsDbTree = $("#tree").fancytree("getTree");
+  treeIndex = 1;
+  $("label[for='treelabel']").text('Payload Directory for ' + selectedNode.nodeTitle);
+  $("#tree").fancytree({selectMode:3});
+  getTreeData();
+  conditionsDbTree.reload(treeData).done(function(){
+  });
+}
+
+
  function read_global_tag_details () {
-   $("#right").replaceWith(window.read_global_tag_tmpl);
+   $("#right").html(window.read_global_tag_tmpl);
  }
 
  function clear_right_div () {
-   $("#right").replaceWith(window.clear_right_tmpl);
+   $("#right").html(window.clear_right_tmpl);
  }
 
+
+ function read_right_textarea () {
+   $("#right").html(window.read_right_textarea_tmpl);
+ }
 
 // window.read_global_tag_tree();
 </script>
@@ -141,6 +440,7 @@ function switch_tree_index () {
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Test<span class="caret"></span></a>
           <ul class="dropdown-menu">
           <li> <a href="#" onclick="window.switch_tree_index()" id="mnu_switch">Toggle Tree...</a> </li>
+          <li> <a href="#" onclick="window.read_right_textarea()" id="mnu_switch">Get Textbox...</a> </li>
           </ul>
         </li>
       </li>
@@ -168,7 +468,7 @@ function switch_tree_index () {
          </tr> 
          <tr>  
             <td>  
-                 <div id="tree"></div> 
+                 <div id="tree"></div>  
             </td> 
           </tr> 
        </table> 
@@ -180,14 +480,23 @@ function switch_tree_index () {
 <!--                         -->
 
     <div class="col-md-6" id="right" >
- 
     </div>
-
 
   </div>
 
 
 </div>
+
+
+        <div id="context-menu2">
+          <ul class="dropdown-menu" role="menu">
+              <li><a tabindex="-1">Create Global Tag</a></li>
+              <li><a tabindex="-1">Clone Global Tag</a></li>
+              <li class="divider"></li>
+              <li><a tabindex="-1">Add Payloads</a></li>
+              <li><a tabindex="-1">Switch Treeview</a></li>
+          </ul>
+        </div>
 
 <!--                        -->
 <!-- Bottom Menu            -->
