--- a/trunk/conditionsdbUi/index.html
+++ b/trunk/conditionsdbUi/index.html
@@ -1,4 +1,3 @@
-!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Conditions Database Demo</title>
@@ -9,7 +8,7 @@
     
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="css/skin-win8/ui.fancytree.css" rel="stylesheet" type="text/css">
-
+  <link href="css/vis.css" rel="stylesheet" type="text/css" />
 <!--Javascript Libraries -->
 
   <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
@@ -20,8 +19,8 @@
   <script src="lib/jquery.fancytree.columnview.js" type="text/javascript"></script>
   <script src="lib/jquery.fancytree.dnd.js" type="text/javascript"></script>
   <script src="lib/jquery.fancytree.table.js" type="text/javascript"></script>
-  <!-- jquery-contextmenu (https://github.com/mar10/jquery-ui-contextmenu/) -->
   <script src="lib/jquery.ui-contextmenu.min.js" type="text/javascript"></script>
+  <script src="lib/vis.js" type="text/javascript" ></script>
 
 <style type="text/css">
 #contextMenu {
@@ -29,19 +28,17 @@
   display:none;
 }
 </style>
-//<style type="text/css">
-//  .ui-menu {
-//    width: 150px;
-//    font-size: 100%;
-//    z-index: 3; /* over ext-wide titles */
-//  }
 
-//  <!-- (Irrelevant source removed.) -->
-//</style>
+  <style type="text/css">
+
+    .vis.timeline .item.range .content {
+      overflow: visible;
+    }
+  </style>
 
 <style type="text/css">
 ul.fancytree-container {
-  width: 400px;
+  width: 350px;
   height: 600px;
   overflow: auto;
   position: relative;
@@ -268,6 +265,7 @@ $(function() {
 }(window.jQuery));
 </script>
 
+<script src="js/read_globaltagpayloads.js" type="text/javascript"></script>
 <script type="text/javascript">
 
 
@@ -285,33 +283,6 @@ selectedNode = new Object();
 selectedNode = {"nodeId":"","nodeType":"","nodeTitle":""};
 </script>
 
-<script>
-//$(function() {
-//  
-//  var $contextMenu = $("#contextMenu");
-//  
-//  $("body").on("contextmenu", "tree", function(e) {
-//    $contextMenu.css({
-//      display: "block",
-//      left: e.pageX,
-//      top: e.pageY
-//    });
-//    return false;
-//  });
-//  
-//  $contextMenu.on("click", "a", function() {
-//     $contextMenu.hide();
-//     create_global_tag () ;
-//     alert("Hi Mom");
-//  });
-//  
-//});
-
-
-
-
-
-</script>
 <!--                                   -->
 <!-- Conditions DB Application Scripts -->
 <!--                                   -->
@@ -371,10 +342,12 @@ function switch_tree_index () {
    if (treeIndex == 1) {
     $("label[for='treelabel']").text('Global Tag Directory');
       treeIndex = 0;
+      $("#tree").fancytree({checkbox:false});
       $("#tree").fancytree({selectMode:1});
    } else {
      treeIndex = 1;
     $("label[for='treelabel']").text('Payload Directory for TEST_GT1');
+      $("#tree").fancytree({checkbox:true});
       $("#tree").fancytree({selectMode:3});
    }
    getTreeData();
@@ -407,7 +380,6 @@ function switch_payload_tree () {
    $("#right").html(window.read_right_textarea_tmpl);
  }
 
-// window.read_global_tag_tree();
 </script>
 
 </head>
@@ -420,27 +392,27 @@ function switch_payload_tree () {
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Conditions Database</a>
+      <a class="navbar-brand" >Conditions Database</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Global Tags <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" >Global Tags <span class="caret"></span></a>
           <ul class="dropdown-menu">
-          <li> <a href="#" onclick="window.create_global_tag()" id="mnu_creategt">Create...</a> </li>
-            <li><a href="#">Edit...</a></li>
-            <li><a href="#">Approval...</a></li>
+          <li> <a  onclick="window.create_global_tag()" id="mnu_creategt">Create...</a> </li>
+            <li><a >Edit...</a></li>
+            <li><a >Approval...</a></li>
           </ul>
         </li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Search<span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" >Search<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Keyword...</a></li>
-            <li><a href="#">Advanced...</a></li>
+            <li><a >Keyword...</a></li>
+            <li><a >Advanced...</a></li>
           </ul>
         </li>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Test<span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" >Test<span class="caret"></span></a>
           <ul class="dropdown-menu">
-          <li> <a href="#" onclick="window.switch_tree_index()" id="mnu_switch">Toggle Tree...</a> </li>
-          <li> <a href="#" onclick="window.read_right_textarea()" id="mnu_switch">Get Textbox...</a> </li>
+          <li> <a  onclick="window.switch_tree_index()" id="mnu_switch">Toggle Tree...</a> </li>
+          <li> <a  onclick="window.read_right_textarea()" id="mnu_switch">Get Textbox...</a> </li>
           </ul>
         </li>
       </li>
@@ -459,7 +431,7 @@ function switch_payload_tree () {
 <!-- Left Content Container -->
 <!--                        -->
 
-    <div class="col-md-6"  id="left" >
+    <div class="col-md-4"  id="left" >
       <table> 
          <tr> 
             <td> 
@@ -479,7 +451,7 @@ function switch_payload_tree () {
 <!-- Right Content Container -->
 <!--                         -->
 
-    <div class="col-md-6" id="right" >
+    <div class="col-md-8" id="right" >
     </div>
 
   </div>
