--- a/trunk/conditionsdbUi/index.html
+++ b/trunk/conditionsdbUi/index.html
@@ -7,13 +7,14 @@
 <!--Stylesheets for GUI -->
     
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
   <link href="css/skin-win8/ui.fancytree.css" rel="stylesheet" type="text/css"> 
   <link href="css/vis.css" rel="stylesheet" type="text/css" />
 <!--Javascript Libraries -->
 
   <script src="lib/jquery-1.11.1.min.js" type="text/javascript"></script>
   <script src="lib/underscore-min.js" type="text/javascript"></script>
-  <script src="lib/vendor/bootstrap.min.js" type="text/javascript"></script>
+  <script src="lib/bootstrap.min.js" type="text/javascript"></script>
   <script src="lib/jquery-ui.custom.js" type="text/javascript"></script>
   <script src="lib/jquery.fancytree.js" type="text/javascript"></script>
   <script src="lib/jquery.fancytree.filter.js" type="text/javascript"></script>
@@ -23,6 +24,7 @@
   <script src="lib/bootbox.min.js" type="text/javascript"></script>
   <script src="lib/jquery.ui-contextmenu.min.js" type="text/javascript"></script>
   <script src="lib/vis.js" type="text/javascript" ></script>
+  <script src="lib/validator.min.js" type="text/javascript" ></script>
 
 <style type="text/css">
 #contextMenu {
